[build-system]
requires = ["setuptools", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "starlink-tracker"
version = "0.1.0"
authors = [
    { name="Quinton Barnes", email="devqbizzle68@gmail.com" }
]
description = "CLI tool for generating data for batches of starlink satellites."
readme = "README.md"
license = { file = "LICENCE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.setuptools]
packages = ["starlink"]

[project.urls]
"Homepage" = "https://github.com/qbizzle68/starlink-tracker"
"Bug Tracker" = "https://github.com/qbizzle68/starlink-tracker/issues"
